--- a/composer.json
+++ b/composer.json
@@ -4,17 +4,10 @@
     "type": "yii2-extension",
     "keywords": [
         "yii2",
-        "extension"
-    ],
-    "license": "BSD-3-Clause",
-    "authors": [
-        {
-            "name": "sndwow",
-            "email": "thmod@qq.com"
-        }
+        "yunxin"
     ],
     "require": {
-        "php": ">=7.0.0",
+        "php": "~8.0.0",
         "yiisoft/yii2": "~2.0.0",
         "yiisoft/yii2-httpclient": "^2.0",
         "ext-json": "*"
@@ -22,6 +15,21 @@
     "autoload": {
         "psr-4": {
             "sndwow\\yunxin\\": "src"
+        }
+    },
+    "repositories": {
+        "0": {
+            "type": "composer",
+            "url": "https://asset-packagist.org"
+        },
+        "packagist": {
+            "type": "composer",
+            "url": "https://mirrors.aliyun.com/composer/"
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "yiisoft/yii2-composer": true
         }
     }
 }
