--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "php": "~8.0.0",
         "yiisoft/yii2": "~2.0.0",
         "yiisoft/yii2-httpclient": "^2.0",
-        "ext-json": "*"
+        "ext-json": "*",
+        "yiisoft/yii2-queue": "^2.3"
     },
     "autoload": {
         "psr-4": {
